--- a/web/packages/shared/package.json
+++ b/web/packages/shared/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gravitational/design": "workspace:*",
+    "ace-builds": "1.36.2",
     "events": "3.3.0",
     "highlight-words-core": "^1.2.3"
   }
