Datadog Incident Management guide (#46514)
* Datadog Incident Management docs

* Backtick

* Update datadog config example

* Update docs

* Omit auto approvals

* Omit helm reference

* Fix lint

* Focus on hosted version

* Update config.json

* Address feedback

- Separate guide for hosted vs self-hosted
- Include jq prerequisite
- Smaller screenshots
- Clarify acceptable recipient types
- Clarify acceptable reviewer input

* Update docs

- Remove self-hosted guide
- Remove outdated diagram
- Include editor role prerequisite
- Include AMR link
- Include auto approvals setup

* Remove self-hosted examples

* Fix lint

* Change datadog_auto_approvals -> teleport.dev/schedules

* Use relative link

--- a/docs/config.json
+++ b/docs/config.json
@@ -1521,6 +1521,11 @@
       "permanent": true
     },
     {
+      "source": "/access-controls/access-request-plugins/datadog-hosted/",
+      "destination": "/admin-guides/access-controls/access-request-plugins/datadog-hosted/",
+      "permanent": true
+    },
+    {
       "source": "/access-controls/access-requests/",
       "destination": "/admin-guides/access-controls/access-requests/",
       "permanent": true
