Enable `strict` for `web/design` 🎉

--- a/web/packages/design/tsconfig.json
+++ b/web/packages/design/tsconfig.json
@@ -6,5 +6,6 @@
     "outDir": "../../../build.assets/.cache/ts/design",
     "emitDeclarationOnly": true,
     "declarationMap": true,
+    "strict": true
   }
 }
